--- a/GLIntegrateWithQt/MainWindow.qrc
+++ b/GLIntegrateWithQt/MainWindow.qrc
@@ -1,4 +1,6 @@
 <RCC>
-    <qresource prefix="MainWindow">
+    <qresource prefix="/MainWindow">
+        <file>Resources/fragmentShader.fs</file>
+        <file>Resources/vertexShader.vs</file>
     </qresource>
 </RCC>
